--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "nodemon": "^2.0.20"
   },
   "dependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.14",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
@@ -17,7 +19,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./dev_src/app.ts",
-    "start:prod": "nodemon ./prod_src/app.js",
+    "start:prod": "nodemon ./dist/app.js",
     "build": "tsc -p ."
   },
   "keywords": [],
