rest api using typeORM capable of crud ops

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "main": "index.js",  
  
   "scripts": {
-    "start:dev": "ts-node dev_src/app.ts",
+    "start:dev": "nodemon dev_src/app.ts",
     "start:dist": "ts-node dist/app.js",
     "build": "tsc -p .",
     "typeorm": "typeorm-ts-node-commonjs",
