--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 PORT=3000
 
     
-type='postgres' 
-    host= 'localhost'
-    port=9999
-    username= 'postgres'
-    password= 'kali2001'
-    database='typeORM_db'
+   pg_type='postgres' 
+   pg_host= 'localhost'
+   pg_port=9999
+   pg_username= 'postgres'
+   pg_password= 'kali2001'
+   pg_database='postgres'
